Contact work with form style

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -19,7 +19,7 @@
 
 
   $button__border-color: rgba(188, 71, 73, 1); // obramowanie przycisków i articles
-  $button__border-radius:rgba(188, 71, 73, 1);
+  $button__border-radius: 10px;
   $button__text-color: $background-color;
   
   $shadow-color: rgb(49, 114, 66);
