--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,10 @@
 @use "./section/education.scss" as *;
 @use "./section/technologies.scss" as *;
 @use "./section/itproject.scss" as *;
+
 @use "./section/contact.scss" as *;
+@use "./section/footer.scss" as *;
+
 
 // Importing all scss files
 
