work with home.scss mobil

--- a/src/scss/section/home.scss
+++ b/src/scss/section/home.scss
@@ -2,13 +2,110 @@
 @use "../../mixins/mixins.scss" as *;
 
 // Home page container
-.home__container {
-    min-height: 100vh;
-    padding: 10% 5%;
+.home {
+  padding: 50px 15px;
+  background-color: $background-color;
+  color: $secondary-color;
+
+  &__container {
+    max-width: 1200px;
+    margin: auto;
     display: flex;
-    flex-direction: row;
-    flex-grow: 1;
+    flex-wrap: wrap;
+    justify-content: space-between;
     background-color: $background-color;
+
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    @media (max-width: 480px) {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &__content {
+    flex: 1;
+    padding: 20px;
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+
+    h3 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.5;
+    }
+
+    &-animation {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+
+    &-socjalicon {
+      display: flex;
+      gap: 1rem;
+      margin-bottom: 1rem;
+
+      a {
+        display: block;
+        width: 40px;
+        height: 40px;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+
+    &-social {
+      display: block;
+      width: 40px;
+      height: 40px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &-button {
+      display: flex;
+      gap: 1rem;
+
+      a {
+        display: block;
+        padding: 10px 20px;
+        background-color: $primary-color;
+        color: $background-color;
+        text-decoration: none;
+        border-radius: 5px;
+        text-align: center;
+      }
+    }
+  }
+
+  &__image {
+    flex: 1;
+    padding: 20px;
+    img {
+      width: 100%;
+      height: auto;
+      border-radius: 50%;
+    }
+  }
 }
 
 .home__content {
