--- a/src/scss/section/technologies.scss
+++ b/src/scss/section/technologies.scss
@@ -23,7 +23,7 @@
     gap: 30px;
     margin: 10px 0;
     padding: 10px;
-    background-color: beige;
+    background-color: $background-color;
 }
 
 .technologies__container:first-child{
@@ -33,7 +33,7 @@
 .technologies__container-box{
     border: 3px solid rgba(17, 12, 12, 0.9);
     border-radius: 10px;
-    background-color: red;
+    background-color: $background-color;
     padding: 30px;
     text-align: center;
     box-shadow: 3px 3px 5px rgba(30, 121, 63, 0.3);
@@ -51,5 +51,8 @@
 }
 
 .technologies__container-box h4:hover{
+    color: $primary-color;
+    background-color: lighten($background-color, 10%);
+    transition: color 0.3s ease, background-color 0.3s ease;
 }
 
