--- a/src/scss/section/education.scss
+++ b/src/scss/section/education.scss
@@ -85,7 +85,7 @@
     display: flex;
     justify-content: space-between;
     white-space: nowrap; /* Prevent wrapping */
-    gap: 10px; /* Add spacing between dates */
+    gap: 10px; 
     font-weight: 800;
     color: $button-color;
     margin: 0px 10px ;
