--- a/src/scss/section/education.scss
+++ b/src/scss/section/education.scss
@@ -99,6 +99,11 @@
         margin: 2rem 0; /* Add spacing around subheading */
     }
 
+    .education .best-car-landpages {
+        text-align: center; /* Center-align Best Car Landpages */
+        margin: 2rem 0; /* Add spacing */
+    }
+
     .education {
         padding: 20px 5px; /* Adjust padding */
     }
