--- a/src/scss/section/itproject.scss
+++ b/src/scss/section/itproject.scss
@@ -18,6 +18,13 @@
     background-color: $background-color;
     color: $secondary-color;
     margin: 20px;
+    // .itprojekt-container {
+    //     display: flex; /* Use flexbox for centering */
+    //     justify-content: center; /* Center horizontally */
+    //     align-items: center; /* Center vertically */
+    //     text-align: center; /* Center text */
+    //     flex-direction: column; /* Stack items vertically if needed */
+    // }
 }
 
 .itproject__container-box{
@@ -49,6 +56,7 @@
         margin: 2rem 0; /* Add spacing around subheading */
     }
 }
+
 
 
 
