--- a/src/scss/section/itproject.scss
+++ b/src/scss/section/itproject.scss
@@ -50,7 +50,7 @@
 }
 
 @media (max-width: 768px) { /* Target smartphones and tablets */
-    .it-project h2 {
+    .itproject h2 {
         font-size: 3rem; /* Adjust subheading size */
         text-align: center; /* Center-align subheading */
         margin: 2rem 0; /* Add spacing around subheading */
