--- a/src/scss/section/footer.scss
+++ b/src/scss/section/footer.scss
@@ -1,35 +1,69 @@
 @use "../variables" as *;
+@use "sass:color";
 
 .footer {
   background-color: $background-color;
-  color: $secondary-color;
-  padding: 2rem 0;
+  padding: 40px 20px;
   text-align: center;
 
   &__container {
     display: flex;
     justify-content: space-around;
-    max-width: 1200px;
-    margin: 0 auto;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__column {
-    flex: 1;
-    padding: 1rem;
+    margin-bottom: 20px;
+    text-align: left;
+
+    @media (max-width: 768px) {
+      text-align: center;
+    }
 
     h3 {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
+      font-size: 1.2em;
+      margin-bottom: 10px;
     }
 
     p {
-      font-size: 1rem;
-      line-height: 1.5;
+      margin-bottom: 5px;
     }
   }
 
-  p {
-    margin-top: 2rem;
-    font-size: 1rem;
+  &__social-links,
+  &__quick-links {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      margin-bottom: 5px;
+
+      a {
+        color: $secondary-color;
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: none;
+          transform: scale(1.1);
+          transition: transform 0.3s ease;
+          color: $hover-color;
+        }
+      }
+    }
+  }
+
+  &__copyright {
+    margin-top: 20px;
+    border-top: 1px solid black;
+
+    padding-top: 10px;
+    font-size: 0.9em;
   }
 }
